--- a/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
+++ b/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
@@ -54,6 +54,10 @@ h6 {
 
 }
 
+a {
+    text-decoration: none;
+}
+
 .main-bg {
     background-image: url('../midias/main-bg.svg');
     background-size: cover;
@@ -69,4 +73,59 @@ h6 {
 
 .secao {
     min-height: 100vh;
+}
+
+.menu {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 1px solid #EEE;
+}
+
+.menu-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.menu h1 {
+    font-size: 2.3rem;
+    color: var(--primary-color);
+}
+
+.menu h1 a {
+    color: inherit;
+}
+
+.menu ul {
+    display: flex;
+    list-style: none;
+}
+
+.menu ul li a {
+    display: block;
+    color: black;
+    padding: 2rem;
+    font-size: 1.8rem;
+    position: relative;
+}
+
+.menu ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0;
+    height:  0.2rem;
+    background-color: crimson;
+    transition: all 300ms ease-in-out ;
+}
+
+.menu ul li a:hover::after {
+    width: 50%;
+    left: 25%;
 }
