--- a/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
+++ b/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
@@ -167,6 +167,11 @@ p {
     overflow: hidden;
 }
 
+.table-pricing {
+    border-collapse: collapse;
+    text-align: left;
+}
+
 
 
 
@@ -208,6 +213,20 @@ p {
     transition: all 300ms ease-in-out;
 }
 
+.table-pricing th {
+    background-color: rgb(230, 230, 230);
+}
+
+.table-pricing legend {
+    font-style: italic;
+}
+
+.table-pricing td, .table-pricing th {
+    border: 1px solid black;
+    width: 20rem;
+    padding: 0.5rem 0 0.5rem 1rem;
+    
+}
 
 
 
