--- a/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
+++ b/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
@@ -68,6 +68,32 @@ p {
 }
 
 
+table {
+    min-width: 360px;
+    width: 100%;
+    border-collapse: collapse;
+    
+}
+
+table td, table th {
+    border: 0.1rem solid black;
+    padding: 1rem;
+    text-align: left;
+}
+
+tfoot td, table th {
+    background-color: rgb(230, 230, 230);;
+}
+
+table caption {
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+
+
 
 
 .main-bg {
@@ -167,10 +193,6 @@ p {
     overflow: hidden;
 }
 
-.table-pricing {
-    border-collapse: collapse;
-    text-align: left;
-}
 
 
 
@@ -213,20 +235,7 @@ p {
     transition: all 300ms ease-in-out;
 }
 
-.table-pricing th {
-    background-color: rgb(230, 230, 230);
-}
 
-.table-pricing legend {
-    font-style: italic;
-}
-
-.table-pricing td, .table-pricing th {
-    border: 1px solid black;
-    width: 20rem;
-    padding: 0.5rem 0 0.5rem 1rem;
-    
-}
 
 
 
