--- a/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
+++ b/Curso HTML e CSS Otavio Miranda/landing page/assets/css/styles.css
@@ -156,7 +156,7 @@ table caption {
 
 .top3-content {
     max-width: 64rem;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -213,6 +213,22 @@ div.full-width {
 
 .heart {
     color: rgb(231, 23, 23);
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transform: rotate(-90deg);
+    border: 0.1rem solid var(--primary-color);
 }
 
 
@@ -354,4 +370,79 @@ div.full-width {
 
 .form-group ::placeholder {
     color: rgb(201, 199, 199);
+}
+
+.close-menu {
+    display: none;
+}
+
+
+
+@media (max-width: 800px) {
+    .intro-content, .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .gallary-image {
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .gallary-image img {
+        width: 100%;
+    }
+
+    .grid-one-content {
+        display: block;
+    }
+
+
+    /*Parte do menu no mobile*/
+    .menu {
+        bottom: 0;
+        text-align: center;
+        
+    }
+
+    .menu-content {
+        height: 100vh;
+    }
+
+    .menu-content, .menu-content ul  {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .close-menu-label::after {
+        content: '☰';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background-color: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+
+    .close-menu:checked~.menu {
+        display: block;
+    }
+    .close-menu:checked~.close-menu-label::after {
+        content: '×';
+    }
+
+    .menu-spacing {
+        display: none;
+    }
 }
